--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "verbatimModuleSyntax": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["ES2015", "DOM", "DOM.Iterable"],
-    "target": "ES2015"
-  }
+    "target": "ES2015",
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
+  },
+  "include": [
+    "src/**/*",
+    "vitest.config.ts"
+  ]
 }
